@@ -1,8 +1,8 @@
 /*
  * Interpreter evaluation functions.
  *
- *  Created on: 15.03.2014
- *      Author: Rene Hartmann
+ * Copyright (C) 2014-2015 Rene Hartmann.
+ * See the file COPYING for redistribution information.
  */
 
 #ifndef INTERP_EVAL_H_
@@ -11,6 +11,10 @@
 #include <rel/rdb.h>
 
 typedef struct Duro_interp Duro_interp;
+
+int
+Duro_evaluate(RDB_expression *, Duro_interp *, RDB_exec_context *,
+        RDB_object *);
 
 int
 Duro_evaluate_retry(RDB_expression *, Duro_interp *, RDB_exec_context *,
